--- a/Web/SatisFactory/CSS/index.css
+++ b/Web/SatisFactory/CSS/index.css
@@ -67,20 +67,28 @@ li {
   border-radius: 12px;
   border: 1px solid rgba(255,255,255,0.1);
   margin-bottom: 200px;
+  height: 1200px;
+  background-color: #e2e2e2;
 }
 
 /* ========================================================================================================= */
 /*  기본으로 필요한 CSS 코드들                                                                                    */
 /* ========================================================================================================= */
 
-.titleImageDiv {
+.titleDiv {
   width: 100%;
   height: 180px;
 }
 
+.titleImageDiv {
+  width: 100%;
+  position: relative;
+  height: 180px;
+  background-color: yellow;
+}
+
 .titleImageBackground {
   width: 100%;
-  height: 100%;
   position: absolute;
   transform : translate(-50%,-50%);
   left:50%;
@@ -89,7 +97,7 @@ li {
 
 .titleImageContent {
   width: 100%;
-  position: absolute;
+  position:absolute;
   transform : translate(-50%,-50%);
   left:50%;
   top:50%;
@@ -105,12 +113,11 @@ li {
   left:50%;
   position: relative;
   width: 60%;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 
 .MainTitle {
   font-size: 18px;
-  font-weight: bold;
   background-color: rgba(0,0,0,0.8);
   padding: 10px 20px;
   margin-top: 20px;
@@ -128,18 +135,23 @@ li {
     border:none;
   }
 
+  .titleDiv {
+    height: 100px;
+  }
+
   .titleImageDiv {
     height: 100px;
   }
 
   .titleImageLogo {
     width : 80%;
+    margin-bottom: 10px;
   }
 
   .MainTitle {
     font-size: 12px;
     background-color: rgba(0,0,0,0.8);
     padding: 5px 15px;
-    margin-top: 15px;
+    margin-top: 5px;
   }
 }
