--- a/Web/SatisFactory/CSS/index.css
+++ b/Web/SatisFactory/CSS/index.css
@@ -5,7 +5,7 @@
   margin: 0;
   padding: 0;
   font-family: 'Noto Sans KR', sans-serif;
-  color:white;
+  color:black;
 }
 
 body::-webkit-scrollbar {
@@ -69,6 +69,7 @@ li {
   margin-bottom: 200px;
   height: 1200px;
   background-color: #e2e2e2;
+  color:black;
 }
 
 /* ========================================================================================================= */
@@ -77,19 +78,22 @@ li {
 
 .titleDiv {
   width: 100%;
-  height: 180px;
+  height: 300px;
+  display: block;
+  color:white;
 }
 
 .titleImageDiv {
   width: 100%;
   position: relative;
-  height: 180px;
+  height: 300px;
   background-color: yellow;
 }
 
 .titleImageBackground {
   width: 100%;
   position: absolute;
+  height: 100%;
   transform : translate(-50%,-50%);
   left:50%;
   top:50%;
@@ -136,11 +140,11 @@ li {
   }
 
   .titleDiv {
-    height: 100px;
+    height: 180px;
   }
 
   .titleImageDiv {
-    height: 100px;
+    height: 180px;
   }
 
   .titleImageLogo {
