--- a/Web/SatisFactory/CSS/index.css
+++ b/Web/SatisFactory/CSS/index.css
@@ -146,6 +146,53 @@ hr {
   font-weight: bold;
 }
 
+
+.playInfoTable_Web {
+  display: table;
+  width: 100%;
+  padding-top: 20px;
+}
+
+.playInfoTable_Web tr:first-child {
+  background-color : #e8e8e8;
+  height: 35px;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.playInfoTable_Web tr:last-child {
+  background-color : #f5f5f5;
+  height: 50px;
+}
+
+.playInfoTable_Mobile {
+  display: none;
+}
+
+.BarMask {
+  width: 100%;
+  height: 20px;
+  border-radius: 10px;
+  margin: 20px 0px;
+  overflow: hidden;
+}
+
+.BarMask div {
+  float:left;
+  height: 100%;
+  text-align: right;
+  line-height: 20px;
+  font-size: 10px;
+  color:white;
+  padding-right: 20px;
+  overflow: hidden;
+}
+
+.BarMask div:last-child {color:#202020}
+.ToDoBar { background-color: rgb(73, 73, 73);}
+.InProgressBar { background-color: rgb(13, 110, 224);}
+.DoneBar { background-color: rgb(219, 219, 219);}
+
 /* ========================================================================================================= */
 /*  모바일 버전 코드                                                                                             */
 /* ========================================================================================================= */
@@ -156,18 +203,18 @@ hr {
   }
 
   .mainDiv {
-    width:420px;
+    width:90vw;
     top:15px;
     margin-bottom: 120px;
     border:none;
   }
 
   .titleDiv {
-    height: 180px;
+    height: 30vw;
   }
 
   .titleImageDiv {
-    height: 180px;
+    height: 30vw;
   }
 
   .titleImageLogo {
@@ -180,5 +227,32 @@ hr {
     background-color: rgba(0,0,0,0.8);
     padding: 5px 15px;
     margin-top: 5px;
+  }
+
+  .playInfoTable_Web {
+    display: none;
+  }
+
+  .playInfoTable_Mobile {
+    display: table;
+    width: 100%;
+    padding-top: 20px;
+  }
+
+  .playInfoTable_Mobile tr td:first-child {
+    background-color : #e8e8e8;
+    font-size: 16px;
+    font-weight: normal;
+    padding: 10px;
+  }
+
+  .playInfoTable_Mobile tr td:last-child {
+    background-color : #f5f5f5;
+    font-size: 16px;
+    padding: 10px;
+  }
+
+  .playInfoSub {
+    font-size: 12px;
   }
 }
