--- a/Web/SatisFactory/HTML/index.ejs
+++ b/Web/SatisFactory/HTML/index.ejs
@@ -57,6 +57,13 @@
         <span>플레이 정보</span>
       </div>
 
+      <div class="RealBG">
+        <div class="RealBGDesc">
+          <span class="RealBGTimeStamp">2022.08.26 PM 10:55</span>
+          <span class="RealBGLocation">미니 호수 근처에 위치한 제 1 석탄 발전소 전경</span>
+        </div>
+      </div>
+
       <table class="playInfoTable_Web">
         <tr> <td> 버전 </td> <td> 플레이 타임 </td> <td> 시작 시간 </td> <td> 시작 바이옴 </td> <td> 마일스톤 단계 </td> </tr>
         <tr> <td> Update 5 </td> <td> 60.3 시간 </td> <td> 2022.08.06 </td> <td> 잔디 평아 </td> <td>
@@ -199,38 +206,38 @@
               <div class="MileStoneSiderBarButton MS_ToDo">Tier 8</div>
             </div>
           </div>
+
           <div class="MileStoneSideBody">
-          
-          <% for (var i = 0; i <= 8; i ++ ) { %>
-          <div class = "MileStonePage MS_Hidden">
-            <% for (var j = 0; j < MileStone[i].length; j ++ ) { %>
-              <div class = "MileStoneItem MileStoneItem_<%= MileStone[i][j].isDone%>">
-                <div class="MileStoneItemImage">
-                  <img src = "<%= MileStone[i][j].img%>">
-                  <div class="MileStoneItemInfo <%= MileStone[i][j].isDone%>">
-                    <%= MileStone[i][j].isDone == 'MS_Result_true' ? '연구 완료' : MileStone[i][j].isDone == 'MS_Result_false' ? '연구 필요' : MileStone[i][j].isDone == 'MS_Result_NotYet' ? '해금 필요' : '연구 중'%>
+            <% for (var i = 0; i <= 8; i ++ ) { %>
+              <div class = "MileStonePage MS_Hidden">
+                <% for (var j = 0; j < MileStone[i].length; j ++ ) { %>
+                  <div class = "MileStoneItem MileStoneItem_<%= MileStone[i][j].isDone%>">
+                    <div class="MileStoneItemImage">
+                      <img src = "<%= MileStone[i][j].img%>">
+                      <div class="MileStoneItemInfo <%= MileStone[i][j].isDone%>">
+                        <%= MileStone[i][j].isDone == 'MS_Result_true' ? '연구 완료' : MileStone[i][j].isDone == 'MS_Result_false' ? '연구 필요' : MileStone[i][j].isDone == 'MS_Result_NotYet' ? '해금 필요' : '연구 중'%>
+                      </div>
+                    </div>
+                    <div class="MileStoneItemBody">
+                      <div class="MileStoneItemSub">MILESTONE TIER <%= i %> : PROJECT No . <%= j%></div>
+                      <div class="MileStoneItemName"><%= MileStone[i][j].name%></div>
+                      <div class="MileStoneItemEnglish"><%= MileStone[i][j].english%></div>
+                      <table class="MileStoneItemTable">
+                        <tr><td>아이템</td><td>요구량</td><td>보유량</td><td>달성</td></tr>
+                        <% for( var k = 0 ; k < MileStone[i][j].cost.length; k++) { %>
+                          <tr class = "<%= MileStone[i][j].cost[k].need <=  MileStone[i][j].cost[k].num  ? 'MS_TableDone' : MileStone[i][j].cost[k].num > 0 ? 'MS_TableProcess' : 'MS_TableToDo' %>">
+                            <td><img src="<%= MileStone[i][j].cost[k].url %>" style="width:32px;"><%= MileStone[i][j].cost[k].item %></td>
+                            <td><%= MileStone[i][j].cost[k].need %></td>
+                            <td><%= MileStone[i][j].cost[k].num %></td>
+                            <td class="<%= MileStone[i][j].cost[k].need <=  MileStone[i][j].cost[k].num  ? 'MS_TableCheck' : ''%>"><%= MileStone[i][j].cost[k].need <=  MileStone[i][j].cost[k].num  ? '●' : '-'%></td>
+                          </tr>
+                        <% } %>
+                      </table>
+                    </div>
                   </div>
-                </div>
-                <div class="MileStoneItemBody">
-                  <div class="MileStoneItemSub">MILESTONE TIER <%= i %> : PROJECT No . <%= j%></div>
-                  <div class="MileStoneItemName"><%= MileStone[i][j].name%></div>
-                  <div class="MileStoneItemEnglish"><%= MileStone[i][j].english%></div>
-                  <table class="MileStoneItemTable">
-                    <tr><td>아이템</td><td>요구량</td><td>보유량</td><td>달성</td></tr>
-                    <% for( var k = 0 ; k < MileStone[i][j].cost.length; k++) { %>
-                      <tr class = "<%= MileStone[i][j].cost[k].need <=  MileStone[i][j].cost[k].num  ? 'MS_TableDone' : MileStone[i][j].cost[k].num > 0 ? 'MS_TableProcess' : 'MS_TableToDo' %>">
-                        <td><img src="<%= MileStone[i][j].cost[k].url %>" style="width:32px;"><%= MileStone[i][j].cost[k].item %></td>
-                        <td><%= MileStone[i][j].cost[k].need %></td>
-                        <td><%= MileStone[i][j].cost[k].num %></td>
-                        <td class="<%= MileStone[i][j].cost[k].need <=  MileStone[i][j].cost[k].num  ? 'MS_TableCheck' : ''%>"><%= MileStone[i][j].cost[k].need <=  MileStone[i][j].cost[k].num  ? '✔' : '-'%></td>
-                      </tr>
-                    <% } %>
-                  </table>
-                </div>
+                <% } %>  
               </div>
-            <% } %>  
-          </div>
-          <% } %>
+            <% } %>
           </div>
         </div>
       </div>
@@ -244,7 +251,7 @@
     #  하드 드라이브 분석을 통해 얻은 대체 제작법들을 적는다
     #
     ############################################################################################################################################################################################-->
-    <!--
+    
     <div class="subDiv">
       <div class="subDivTitle">
         <span>대체 제작법</span>
@@ -252,23 +259,6 @@
     </div>
 
     <hr>
-    -->
-
-    <!--############################################################################################################################################################################################
-    #
-    #  전력 생산량
-    #  월드 내 전력 생산 및 소비량 통계를 보여준다
-    #
-    ############################################################################################################################################################################################-->
-    <!--
-    <div class="subDiv">
-      <div class="subDivTitle">
-        <span>전력 생산량</span>
-      </div>
-    </div>
-
-    <hr>
-    -->
 
     <!--############################################################################################################################################################################################
     #
