--- a/Web/SatisFactory/HTML/index.ejs
+++ b/Web/SatisFactory/HTML/index.ejs
@@ -94,12 +94,12 @@
     #  Kanban 스타일의 워크 플로우 작성
     #
     ###########################################################################################################################################################################################-->
-    
+
     <div class="subDiv">
       <div class="subDivTitle">
         <span>워크 플로우</span>
       </div>
-
+      <span class="subDivTitleSub">Kanban 스타일의 업무 시스템 정리</span>
       <div class="BarMask" width="100%">
         <div class="ToDoBar" id="ToDoBar" style="width : calc(<%= 100 * (ToDo.length / (ToDo.length + InProgress.length + Done.length)) %>% - 20px)">To Do</div>
         <div class="InProgressBar" id="InProgressBar" style="width : calc(<%= 100 * (InProgress.length / (ToDo.length + InProgress.length + Done.length)) %>% - 20px)">In Progress</div>
@@ -115,7 +115,7 @@
                 <% var item = ToDo[i] %>
                 <div class="KanbanItem DoneItem ">
                   <div class="KanbanItemIcon">
-                    <img src="../SatisFactory/IMG/<%= item['type']%>.png"> 
+                    <img src="../SatisFactory/IMG/<%= item['type']%>.png">
                   </div>
                   <div class="KanbanItemBody">
                     <div><span class="KanbanItemPriority <%= item['priority']%>">우선 순위 <%= item['priority']%></span></div>
@@ -137,7 +137,7 @@
                 <% var item = InProgress[i] %>
                 <div class="KanbanItem DoneItem ">
                   <div class="KanbanItemIcon">
-                    <img src="../SatisFactory/IMG/<%= item['type']%>.png"> 
+                    <img src="../SatisFactory/IMG/<%= item['type']%>.png">
                   </div>
                   <div class="KanbanItemBody">
                     <div><span class="KanbanItemPriority <%= item['priority']%>">우선 순위 <%= item['priority']%></span></div>
@@ -159,7 +159,7 @@
                 <% var item = Done[i] %>
                 <div class="KanbanItem DoneItem ">
                   <div class="KanbanItemIcon">
-                    <img src="../SatisFactory/IMG/<%= item['type']%>.png"> 
+                    <img src="../SatisFactory/IMG/<%= item['type']%>.png">
                   </div>
                   <div class="KanbanItemBody">
                     <div><span class="KanbanItemPriority <%= item['priority']%>">우선 순위 <%= item['priority']%></span></div>
@@ -176,7 +176,7 @@
       </div>
     </div>
     <hr>
-    
+
 
     <!--############################################################################################################################################################################################
     #
@@ -190,7 +190,7 @@
       <div class="subDivTitle">
         <span>마일스톤</span>
       </div>
-
+      <span class="subDivTitleSub">해금하거나 연구한 마일스톤 및 연구 목록</span>
       <div class="MileStoneMonitor_Web">
         <div class="MileStoneMonitor_WebBorder">
           <div class="MileStoneSideBar">
@@ -235,7 +235,7 @@
                       </table>
                     </div>
                   </div>
-                <% } %>  
+                <% } %>
               </div>
             <% } %>
           </div>
@@ -251,10 +251,48 @@
     #  하드 드라이브 분석을 통해 얻은 대체 제작법들을 적는다
     #
     ############################################################################################################################################################################################-->
-    
+
     <div class="subDiv">
       <div class="subDivTitle">
         <span>대체 제작법</span>
+      </div>
+      <span class="subDivTitleSub">하드 드라이브 분석으로 얻은 대체 제작법 목록</span>
+      <div class="HDD_MainDiv">
+        <% for (let HDD_Index = 0; HDD_Index < HDD.length; HDD_Index++) { %>
+          <div class="HDD_Item ">
+            <div class="HDD_ItemImg">
+              <img src = "../SatisFactory/IMG/HDD/<%= HDD[HDD_Index].img%>" />
+            </div>
+            <div class="HDD_ItemBody">
+              <div class="HDD_ItemName"><%= HDD[HDD_Index].item %></div>
+              <div class="HDD_ItemEnglish"><%= HDD[HDD_Index].english %></div>
+              <table class = "HDD_ItemTable">
+                <tr/><td>도구</td><td><%= HDD[HDD_Index].alter_target %></td><td><%= HDD[HDD_Index].origin_target %></td></tr/>
+                <tr/>
+                <td>재료</td><td>
+                  <% for(var t = 0; t < HDD[HDD_Index].alter_cost.length; t ++) { %>
+                    <div class="HDD_ItemCost"><%= HDD[HDD_Index].alter_cost[t] %></div>
+                  <% } %>
+                </td><td>
+                  <% for(var t = 0; t < HDD[HDD_Index].origin_cost.length; t ++) { %>
+                    <div class="HDD_ItemCost"><%= HDD[HDD_Index].origin_cost[t] %></div>
+                  <% } %>
+                </td></tr/>
+                <tr/>
+                  <td>생산량</td>
+                  <td><%= HDD[HDD_Index].alter_product %> <span class="HDD_ItemEfficiency <%= HDD[HDD_Index].isGoodEfficiency ? 'efficiency' : 'notEfficiency' %>"><%= HDD[HDD_Index].efficiency %></span></td>
+                  <td><%= HDD[HDD_Index].origin_product %> </td>
+                </tr/>
+              </table>
+            </div>
+          </div>
+        <% } %>
+      </div>
+
+      <div class="HDD_Page">
+        <% for(let page = 0 ; page <= parseInt( (HDD.length-1) / 3); page ++) { %>
+          <div class="pageButton"><%= page + 1%></div>
+        <% } %>
       </div>
     </div>
 
